automatizar ejecutable final y limpieza de rutas
- refactor(graphviz): Se eliminó la ruta absoluta (C:\...) hardcodeada para la generación del AST. Ahora utiliza comandos relativos (`dot`) asumiendo variables de entorno, cumpliendo con la corrección del feedback.
- fix(llvm): Se eliminó la dependencia de `runtime.c` / `libreria.c` en el comando de Clang, haciendo al compilador 100% autónomo.
- feat(cli): Se integró la llamada automática a `generarEjecutable()` dentro del flujo de `compileSource`. El compilador ahora genera el `.exe` nativo de forma directa sin requerir que el usuario abra la consola manualmente.